# gamewinner

./: .coverage  .coveragerc  .gitignore  .mypy.ini  .pre-commit-config.yaml  Makefile  README.md  bracket.txt  cli.py  pyproject.toml  pytest.ini  regional_bracket.txt
.github/workflows/: ci.yaml  main.yaml
data/: 2022.csv  2023.csv  2023.yaml  2024.csv  2024.yaml  _results_template.yaml  _template.yaml
data/csv/: 2022.csv  2024.csv
data/results/: 2023.yaml  2024.yaml  template.yaml
data/seeds/: 2023.yaml  2024.yaml
docker/: Dockerfile-gamewinner  docker-compose.yaml
gamewinner/: __init__.py  gamewinner.py  team.py  years.py
gamewinner/bracket/: __init__.py  bracket.py  bracket_node.py  exceptions.py  game.py  geographic_region.py  parser.py  parsers.py  region.py  regional_bracket.py  round.py  scoring.py  stage.py  team.py  work-in-progress.py  work_in_progress.py  years.py
gamewinner/games/: bracket.py  final_four.py  region.py
gamewinner/printers/: __init__.py  basic_file_printer.py  ifile_printer.py  iprinter.py  pdf_bracket.py  plain_text.py  rich.py  with_colors.py
gamewinner/strategies/: __init__.py  best_rank_wins.py  highest_wins.py  istrategy.py  lowest_wins.py  worst_rank_wins.py
gamewinner/strategies/espn/: iespn.py
gamewinner/strategies/evanmiya/: README.md  chillz.py  doctor_lizard.py  doubletime.py  firewater.py  ievanmiya.py  ievanmiya2.py  mr_freeze.py  recency_bias.py  slothfire_steady.py  the_cuts.py  the_white_whale.py  theowl.py  tripletime.py  vanilla_miya.py
gamewinner/strategies/evanmiya/data/: evanmiya-recent.csv  evanmiya.csv  evanmiya_clean_20230309.csv
gamewinner/strategies/examples/: best_rank_wins.py  worst_rank_wins.py
gamewinner/strategies/mathstats/: imathstats.py
gamewinner/strategies/mathstats/data/: mathstats2023.csv  (+1 more)
gamewinner/teams/: alternate_names.py  team.py
tests/: conftest.py  expected_first_round.py  expected_teams.py  test_bracket.py  test_cli.py  test_game.py  test_get_definitive_name.py  test_make_brackets.py  test_parser.py  test_printer.py  test_scoring.py  test_strategies.py  test_this_year.py
(+12 files in other folders)
