[tool.poetry]
name = "gamewinner"
version = "0.1.0"
description = ""
authors = ["Noah Bloom <ntbloom@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line_length = 88

[tool.mypy]
python_version = 3.11
warn_return_any = true
ignore_missing_imports = true
follow_imports = "normal"
pretty = true
warn_unreachable = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
